# TensorHawk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  LICENSE  README.md  SECURITY.md  SHA256SUMS
.github/workflows/: ci.yml  release.yml
crates/tensorhawk-cli/: Cargo.toml
crates/tensorhawk-cli/src/: main.rs
crates/tensorhawk-core/: Cargo.toml
crates/tensorhawk-core/src/: artifact.rs  finding.rs  format.rs  lib.rs  report.rs
crates/tensorhawk-core/src/scanners/: entropy.rs  metadata.rs  mod.rs  pickle.rs  pii.rs  secrets.rs
crates/tensorhawk-core/tests/: integration.rs
docs/: ARCHITECTURE.md  ROADMAP.md
rules/: builtin.toml
tests/fixtures/: leaky.safetensors  model.gguf
