[package]
name = "tensorhawk-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for TensorHawk"

[[bin]]
name = "tensorhawk"
path = "src/main.rs"

[dependencies]
tensorhawk-core = { path = "../tensorhawk-core", version = "0.1.0" }
clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true
walkdir.workspace = true
